--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,22 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_KEY=base64:ojoYchenwjMReaeEIky2kzoVTptlNTiFepntpitfMJ0=
 
 LOG_CHANNEL=stack
 
+
+X_API_ID=f96ae22f7c5d74fa4d78e764563d52811570588e
+
+X_API_KEY=cc79ee9464257c9e1901703e04ac9f86b0f387c2
+
+URL_REST_API =https://sandbox-api.arquivei.com.br/v1/nfe/received
+
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=desafio
 DB_USERNAME=root
 DB_PASSWORD=
 
